Add update and Add user functionality